# megaMine

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CHANGELOG.md  methods_notes.md
resources/: onco_drugs_example.txt
src/megaMine/: __init__.py
src/megaMine/core/: extractor.py  maf_pipeline.py  main_pipeline.py
src/megaMine/data/: drug_whitelist_v2.json
src/megaMine/modules/: __init__.py  contradiction.py  graph.py  llm_verify.py  temporal.py  trials.py
src/megaMine/report/: html_report.py
src/megaMine/utils/: normalizers.py  scalability.py
src/megaMine/validation/: __init__.py  benchmarks.py  evaluation.py  gold_standard.py
