[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "megaMine"
version = "0.1.0"
description = "Hybrid literature mining for precision oncology — gene-drug-cancer evidence extraction, temporal tracking, contradiction detection, and knowledge graph export."
authors = [
  { name = "Muhammad Junaid", email = "junaidm@ajou.ac.kr" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
  "requests>=2.28",
  "pandas>=1.5",
  "numpy>=1.23",
  "tqdm>=4.64",
  "lxml>=4.9",
  "beautifulsoup4>=4.11",
  "openpyxl>=3.0",
  "python-dateutil>=2.8",
  "networkx>=2.8",
  "plotly>=5.0",
  "biopython>=1.79",
]

[project.scripts]
megaMine = "megaMine.core.extractor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/Junaid13913/megaMine"
Repository = "https://github.com/Junaid13913/megaMine"

[tool.setuptools.package-data]
"megaMine" = ["data/*.json", "data/*.txt"]
